# sen66-matter-sensor

./: .gitignore  CMakeLists.txt  README.md  Untitled-1.sh  partitions_example.csv  sdkconfig-test.defaults  sdkconfig.defaults  sdkconfig.defaults_  sdkconfig_04-25.defaults
components/air_quality/: CMakeLists.txt
components/air_quality/include/: AirQualityClassifier.h  MatterAirQuality.h  SEN66Ranges.h  SmaFilter.h
components/air_quality/src/: AirQualityClassifier.cpp  MatterAirQuality.cpp
components/aq_sensor/: aq_sensor.c  aq_sensor.h
components/sen66/: CMakeLists.txt
components/sen66/include/: sen66_i2c.h  sen66_sensor.h
components/sen66/src/: sen66_sensor.cpp  sensirion_i2c_hal.c
components/sensor_task/: CMakeLists.txt
components/sensor_task/include/: SensorTask.h
components/sensor_task/src/: SensorTask.cpp
main/: CMakeLists.txt  MatterAirQuality.cpp  MatterAirQuality.h  app_main.cpp  app_reset.cpp  app_reset.h  esp-matter-mfg-tool -cn "SEN66 Matter Ai.ps1  factory_reset.cpp  sen66_sensor.h  sntp_sync.cpp  sntp_sync.h
main/certification_declaration/: certification_declaration.der
main/src/: app_main.cpp  factory_reset.h  sntp_sync.cpp  sntp_sync.h
main/src/certification_declaration/: certification_declaration.der
